fix card cut off

--- a/css/style.css
+++ b/css/style.css
@@ -46,7 +46,7 @@ ul {
 .card {
   width: 700px;
   padding: 20px;
-  margin: 10px auto 0px auto;
+  margin: 10px auto 3px auto;
 }
 
 .cardTitle {
